<resources>
    <string name="app_name">Calculator</string>
    <string name="txt_num2">2</string>
    <string name="txt_num3">3</string>
    <string name="txt_num4">4</string>
    <string name="txt_num5">5</string>
    <string name="txt_num6">6</string>
    <string name="txt_num7">7</string>
    <string name="txt_num8">8</string>
    <string name="txt_num9">9</string>
    <string name="txt_num0">0</string>
    <string name="txt_numtochka">.</string>
    <string name="txt_num1">1</string>
    <string name="txt_С">С</string>
    <string name="txt_procent">%</string>
    <string name="txt_div">/</string>
    <string name="txt_rav">=</string>
    <string name="txt_del">Del</string>
    <string name="txt_mult">X</string>
    <string name="txt_minus">-</string>
    <string name="txt_plus">+</string>
    <string name="txt_numIngineer"><![CDATA[=>]]></string>
    <string name="txt_tan">tan</string>
    <string name="txt_cos">cos</string>
    <string name="txt_sin">sin</string>
    <string name="txt_x">X*X</string>
    <string name="txt_pi">Pi</string>
    <string name="txt_E">e</string>
    <string name="txt_Rad">Rad</string>
    <string name="txt_sinh">sinh</string>
    <string name="txt_cosh">cosh</string>
    <string name="txt_tanh">tanh</string>
</resources>
