<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/disp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text=" "
            android:textAlignment="center"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/dispout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text=" "
            android:textAlignment="center"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/t1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="I"
                    app:layout_constraintEnd_toStartOf="@+id/t6"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread" />

                <TextView
                    android:id="@+id/t2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="S"
                    app:layout_constraintBaseline_toBaselineOf="@+id/t7"
                    app:layout_constraintEnd_toStartOf="@+id/t7"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toEndOf="@+id/t5"
                    app:layout_constraintVertical_chainStyle="spread" />

                <TextView
                    android:id="@+id/t3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="K"
                    app:layout_constraintEnd_toStartOf="@+id/t4"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toEndOf="@+id/t6"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread" />

                <TextView
                    android:id="@+id/t4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="O"
                    app:layout_constraintBaseline_toBaselineOf="@+id/t3"
                    app:layout_constraintEnd_toStartOf="@+id/t5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toEndOf="@+id/t3"
                    app:layout_constraintVertical_chainStyle="spread" />

                <TextView
                    android:id="@+id/t5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="V"
                    app:layout_constraintEnd_toStartOf="@+id/t2"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toEndOf="@+id/t4"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread" />

                <TextView
                    android:id="@+id/t6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="S"
                    app:layout_constraintBaseline_toBaselineOf="@+id/t3"
                    app:layout_constraintEnd_toStartOf="@+id/t3"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toEndOf="@+id/t1"
                    app:layout_constraintVertical_chainStyle="spread" />

                <TextView
                    android:id="@+id/t7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="K"
                    app:layout_constraintEnd_toStartOf="@+id/t8"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toEndOf="@+id/t2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread" />

                <TextView
                    android:id="@+id/t8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="I"
                    app:layout_constraintBaseline_toBaselineOf="@+id/t7"
                    app:layout_constraintEnd_toStartOf="@+id/t9"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toEndOf="@+id/t7"
                    app:layout_constraintVertical_chainStyle="spread" />

                <TextView
                    android:id="@+id/t9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="K"
                    app:layout_constraintBaseline_toBaselineOf="@+id/t8"
                    app:layout_constraintEnd_toStartOf="@+id/t10"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toEndOf="@+id/t8"
                    app:layout_constraintVertical_chainStyle="spread" />

                <TextView
                    android:id="@+id/t10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="H"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toEndOf="@+id/t9"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/numPi"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/txt_pi" />


                    <Button
                        android:id="@+id/numX"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/txt_x" />

                    <Button
                        android:id="@+id/numSin"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/txt_sin" />

                    <Button
                        android:id="@+id/numCos"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/txt_cos" />

                    <Button
                        android:id="@+id/numTan"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/txt_tan" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="vertical">


                    <Button
                        android:id="@+id/numRad"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/txt_Rad" />

                    <Button
                        android:id="@+id/numSinh"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/txt_sinh" />

                    <Button
                        android:id="@+id/numCosh"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/txt_cosh" />

                    <Button
                        android:id="@+id/numTanh"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/txt_tanh" />
                </LinearLayout>


            </RelativeLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/disp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/numC"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_С" />

                <Button
                    android:id="@+id/numdel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_del" />

                <Button
                    android:id="@+id/numprocent"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_procent" />

                <Button
                    android:id="@+id/numdiv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_div" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/numС"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/num7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_num7" />

                <Button
                    android:id="@+id/num8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_num8" />

                <Button
                    android:id="@+id/num9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_num9" />

                <Button
                    android:id="@+id/nummult"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_mult" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/num7"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/num4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_num4" />

                <Button
                    android:id="@+id/num5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_num5" />

                <Button
                    android:id="@+id/num6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_num6" />

                <Button
                    android:id="@+id/numminus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_minus" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/numС"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/num1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_num1" />


                <Button
                    android:id="@+id/num2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_num2" />

                <Button
                    android:id="@+id/num3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_num3" />

                <Button
                    android:id="@+id/numplus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_plus" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/num1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/numIngineer"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_numIngineer" />

                <Button
                    android:id="@+id/num0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_num0" />

                <Button
                    android:id="@+id/numtochka"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_numtochka" />

                <Button
                    android:id="@+id/numrav"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/txt_rav" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>